# cfn_etem_utils

./: README.md  pyproject.toml  requirements.txt  setup.py
cfntem/cmd/: area_vote.py  average_image_folder.py  binarize_image_folder.py  convert_checkpoint_to_yuewei_format.py  convert_dm4_to_png.py  convert_stacked_dm4_to_tiff.py  drift_corrected_average.py  drift_correction.py  read_K2.py  sanitize_binarized_images.py  track_particles.py  udvd_denoising.py  wait_ipp_engines.py
cfntem/format_conversion/: k2_to_numpy.py  read_K2.py
cfntem/io/: read_K2.py
cfntem/particle_tracking/: image_processing.py  io.py  tracking.py  utils.py
cfntem/particle_tracking/data/: binarization_params.json  frame_merge_params.json  image_enhance_params.json  mask_fix.json
cfntem/particle_tracking/gui/: image_visualization.py  parameter_tuner.py
cfntem/tem_record/: .gitignore
cfntem/tem_record/core/: gatansocket.py  record_images.py
cfntem/tem_record/example/: test_pyscope_tecnai_interface.py
info/: gtg_tags.json  ipp_test.py
notebooks/: bin_dm4.ipynb  ga_params_opt.ipynb
scripts/: run_drift_correction.sh
shell_scripts/: run_denoise_drift_correction_and_average.sh  run_k2_conv.sh
