[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cfntem"
version = "1.0.1"
authors = [
  {name="Xiaohui Qu", email="xiaqu@bnl.gov"},
  {name="Dmitri Zakharov", email="dzakharov@bnl.gov"},
  {name="Meng Li", email="mli4@bnl.gov"}
]
description = "Python scripts to process TEM images"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy~=1.26",
  "torch~=2.1",
  "torchvision~=0.16",
  "scipy~=1.11",
  "plotly~=5.9",
  "pandas~=1.5",
  "ipyparallel~=8.6",
  "opencv-python~=4.9"
]

[project.scripts]
wait_ipp_engines = "cfntem.cmd.wait_ipp_engines:main"
convert_stacked_dm4_to_tiff = "cfntem.cmd.convert_stacked_dm4_to_tiff:main"
drift_correction = "cfntem.cmd.drift_correction:main"
drift_corrected_average = "cfntem.cmd.drift_corrected_average:main"

[tool.hatch.build]
include = ["cfntem", "info"]
exclude = [".circleci", ".git", ".gitignore"]

[project.urls]
"Homepage" = "https://github.com/CFN-ETEM/cfn_etem_utils"


